preload Hotsposts in cache